<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/alunome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/textnome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/alucpf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/textcpf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/alurg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/alurg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/alufone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/alufone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/aluend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/aluend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btnsalvar"
        android:id="@+id/btnsalvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/listaaluno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/ListViewalu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
